--- a/style/style.css
+++ b/style/style.css
@@ -14,7 +14,9 @@ input, textarea {
 .form-control, .form-check-input {
   border: none;
   border-radius: 8px 2px 8px 2px;
-  background-color: #D3D3D3; }
+  background-color: #D3D3D3;
+  max-width: 400px;
+  margin-left: 10%; }
 
 .btns:hover {
   background-color: black;
