--- a/style/style.scss
+++ b/style/style.scss
@@ -20,10 +20,14 @@ input, textarea {
 
 }
 
+
 .form-control, .form-check-input, {
   border: none;
   border-radius: 8px 2px 8px 2px;
   background-color: $gray;
+  max-width: 400px;
+  margin-left: 10%
+
 }
 
 .btns:hover {
@@ -224,6 +228,9 @@ hr {
 .col-8 {
   margin-top: 40px;
   margin-bottom: 40px;
+}
+
+.order {
 }
 
 .navbar-text{
