--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,11 @@
 body, html {
   height: 100%;
+  font-family: 'Cardo', serif !important;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Oswald', sans-serif !important;
+  text-transform: uppercase;
 }
 
 .scroll {
