--- a/style.css
+++ b/style.css
@@ -113,7 +113,7 @@ a:hover {
   margin: 20px auto;
   padding: 10px;
   width: 300px;
-  height: 300px;
+  height: auto;
   background-color: #e5e4e2;
   border-radius: 5px;
 }
@@ -127,11 +127,15 @@ a:hover {
   text-align: center;
 }
 
+#about {
+  padding: 40px;
+}
+
 form {
   text-align: center;
 }
 
-input {
+input, textarea {
   padding: 12px 0;
   margin-bottom: 10px;
   border-radius: 3px;
@@ -167,6 +171,21 @@ form .btn:hover, form .btn:active {
 }
 
 .request a:link, .request a:visited {
-  font-size: 12px;
+  font-size: 15px;
   color: #777;
+}
+
+.scroll3 {
+  background-image: url('imgs/set.jpg');
+  height: 50%;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+#map {
+  margin: 20px auto 20px auto;
+  width: 400px;
+  height: 250px;
 }
