--- a/style.css
+++ b/style.css
@@ -186,6 +186,6 @@ form .btn:hover, form .btn:active {
 
 #map {
   margin: 20px auto 20px auto;
-  width: 400px;
+  max-width: 400px;
   height: 250px;
 }
