--- a/style.css
+++ b/style.css
@@ -154,7 +154,7 @@ a:hover {
 
 #ext {
   width: 70%;
-  color: #7E8D85;
+  color: #fff;
   font-size: 28px;
   margin: auto;
   margin-bottom: 20px;
@@ -177,7 +177,7 @@ input, textarea {
 }
 
 form .field {
-  background-color: #7E8D85;
+  background-color: #fff;
 }
 
 form .field:focus {
@@ -247,8 +247,12 @@ footer {
   padding-top: 30px;
 }
 
+.sec1 {
+  padding-top: 40px;
+}
+
 #logo1 {
-  max-width: 40px;
+  max-width: 60px;
   margin-top: -7px;
   margin-right: 7px;
 }
