--- a/style.css
+++ b/style.css
@@ -213,6 +213,23 @@ form .btn:hover, form .btn:active {
   text-align: center;
 }
 
+.Subscribe {
+  height: 45%;
+  background: radial-gradient(ellipse farthest-corner at 0 140%, #F5D547 0%, #FF312E 70%, #FE4A49 70%);
+}
+
+
+
+.news input {
+  width: auto;
+}
+
+.news {
+
+  float: left;
+  width: 900px ;
+}
+
 .request a:link, .request a:visited {
   font-size: 15px;
   color: #7E8D85;
@@ -239,16 +256,27 @@ form .btn:hover, form .btn:active {
   animation: formFade 1s ease-in;
 }
 
+
 footer {
-  height: 100px;
+
   background-color: #FF312E;
   color: white;
   text-align: center;
-  padding-top: 30px;
+  height: 50px;
+  padding-top: 10px;
+}
+
+.end {
+  background-color: #7E8D85;
+  padding: 0px;
 }
 
 .sec1 {
   padding-top: 40px;
+}
+
+#logo0 {
+
 }
 
 #logo1 {
@@ -290,8 +318,8 @@ footer {
 
 #map {
   margin: auto;
-  max-width: 400px;
-  height: 250px;
+  max-width: 300px;
+  height: 350px;
 }
 
 @media only screen and (max-device-width: 1366px) {
