--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .blur {
   filter: none;
+
 }
 
 #laner_electric {
@@ -171,7 +172,7 @@ form {
   text-align: center;
 }
 
-input, textarea {
+input, textarea, .btn1 {
   padding: 12px 0;
   margin-bottom: 10px;
   border-radius: 3px;
@@ -190,7 +191,7 @@ form .field:focus {
   border: 2px solid #3498DB;
 }
 
-form .btn {
+form .btn, .btn1 {
   background-color: #FF312E;
   color: #fff;
   line-height: 25px;
@@ -215,15 +216,20 @@ form .btn:hover, form .btn:active {
 .order-inner {
   margin-left: 25%;
   margin-top: 10%;
-  background-color: white;
+  background-color: #333138;
   width: 50%;
-  max-height: 400px;
+  max-height: 500px;
   overflow-y: scroll;
   border-radius: 5px;
+  color: white;
 }
 
 .order-inner input {
-  background-color: grey;
+  background-color: #fff;
+}
+
+.order-form-vis input {
+  border: 2px solid green;
 }
 
 .request {
