--- a/style.css
+++ b/style.css
@@ -177,7 +177,7 @@ ul {
 }
 
 .scroll2 {
-  background-image: url('imgs/gg.png');
+  background-image: url('imgs/solar.jpg');
   height: 50%;
   background-attachment: fixed;
   background-position: center;
@@ -191,7 +191,10 @@ ul {
 
 .big {
   background-color: rgb(51, 49, 56);
-  color: #fff
+  color: #fff;
+  -webkit-box-shadow: 0px 34px 25px -8px rgba(0,0,0,0.74);
+  -moz-box-shadow: 0px 34px 25px -8px rgba(0,0,0,0.74);
+  box-shadow: 0px 34px 25px -8px rgba(0,0,0,0.74);
 }
 
 .big h1, .big h3 {
@@ -204,6 +207,10 @@ ul {
 
 .big .card-par {
   color: black;
+}
+
+.xtr {
+  margin: 40px;
 }
 
 .car {
