--- a/style.css
+++ b/style.css
@@ -65,6 +65,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .close {
   cursor: pointer;
+  color: red;
 }
 
 #logo {
@@ -532,6 +533,12 @@ footer {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+}
+
+#x {
+  float: left;
+  margin-left: 10px;
+  margin-top: 10px;
 }
 
 .jumbotron {
