--- a/style.css
+++ b/style.css
@@ -467,11 +467,16 @@ form .btn:hover, form .btn:active {
   text-align:center;
 }
 
+.final-card-inner img{
+  filter: drop-shadow(10px 10px 20px #000);
+}
+
 .final-card-inner {
+  padding: 10px;
   display: inline-block;
   max-width: 300px;
   max-height: 320px;
-  background-color: #F5D547;
+  background-color: #7E8D85;
   color: black;
   border-radius: 15px 5px 15px 5px;
   -webkit-box-shadow: 10px 10px 16px -6px rgba(0,0,0,0.46);
@@ -491,9 +496,11 @@ form .btn:hover, form .btn:active {
 }
 
 
+
+
 footer {
-  background: radial-gradient(ellipse farthest-corner at 0 140%, #F5D547 0%, #FF312E 70%, #FE4A49 70%);
-  color: white;
+  background-color: #333138;
+  color: #F5D547;
   text-align: center;
   height: 50px;
   padding-top: 10px;
@@ -511,13 +518,17 @@ footer {
   border-bottom: 2px solid #F5D547;
   border-left: 2px solid #F5D547;
   border-radius: 0px 0px 0px 20px;
-  transition: 0.5s ease
+  transition: 0.2s ease
+}
+
+.contact .field2:not(textarea) {
+  height: 40px;
 }
 
 .contact .field2:focus, textarea:focus {
   outline: none;
-  border-bottom: 3px solid #FF312E;
-  border-left: 3px solid #FF312E;
+  filter: drop-shadow(10px 10px 20px #000);
+
 }
 
 .btn2 {
